# GAMES101_HOMEWORK

./: .gitignore  CMakeLists.txt
Assignment5/: CMakeLists.txt  Renderer.cpp  Scene.hpp  Triangle.hpp  global.hpp  main.cpp
Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
